fix minor text layout issue

--- a/pages/products/cloud/pricing.styles.scss
+++ b/pages/products/cloud/pricing.styles.scss
@@ -483,9 +483,9 @@
           margin-top:$gutter;
         }
         position: relative;
-        .pre-title{
-          text-align: left;
-        }
+        //.pre-title{
+        //  text-align: left;
+        //}
         .text-item-lines {
           position: absolute;
           height: 100%;
